--- a/package.json
+++ b/package.json
@@ -19,5 +19,10 @@
   "dependencies": {
     "autoprefixer": "^9.7.6",
     "polyfill": "^0.1.0"
+  },
+  "devDependencies": {
+    "browser-sync": "^2.26.7",
+    "gulp": "^4.0.2",
+    "gulp-sass": "^4.0.2"
   }
 }
