--- a/package.json
+++ b/package.json
@@ -21,8 +21,16 @@
     "polyfill": "^0.1.0"
   },
   "devDependencies": {
+    "babel": "^6.23.0",
+    "babel-core": "^6.26.3",
+    "babel-preset-es2015": "^6.24.1",
     "browser-sync": "^2.26.7",
     "gulp": "^4.0.2",
     "gulp-sass": "^4.0.2"
+  },
+  "babel": {
+    "presets": [
+      "es2015"
+    ]
   }
 }
